--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           POSTGRES_USER: airline_user
           POSTGRES_PASSWORD: airline_password
-          POSTGRES_DB: airline_db
+          POSTGRES_DB: airline_db_test
         ports:
           - 5432:5432
         options: >-
@@ -31,6 +31,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
+        cache: 'pip'
         
     - name: Install dependencies
       run: |
@@ -39,17 +40,44 @@ jobs:
         
     - name: Run tests
       env:
-        DATABASE_URL: postgresql://airline_user:airline_password@localhost:5432/airline_db
+        PYTHONPATH: ${{ github.workspace }}
+        DATABASE_URL: postgresql://airline_user:airline_password@localhost:5432/airline_db_test
       run: |
-        pytest
+        pytest --cov=app tests/
         
     - name: Run linting
       run: |
-        flake8 .
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --statistics
         black . --check
+        
+    - name: Upload coverage reports
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
+
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Run Bandit security checks
+      run: |
+        pip install bandit
+        bandit -r ./app -f json -o bandit-results.json
+        
+    - name: Run Snyk to check for vulnerabilities
+      uses: snyk/actions/python@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: --severity-threshold=high
 
   build-and-push:
-    needs: test
+    needs: [test, security-scan]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     
@@ -70,4 +98,8 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/airline-system:latest 
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/airline-system:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/airline-system:${{ github.sha }}
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/airline-system:buildcache
+        cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/airline-system:buildcache,mode=max 
